Fix GitHub Actions workflows and add status badges
- Fix module01/module02 references to week01/week02 in lab01.md and lab02.md
- Fix week02.py references to lab02.py in lab02.md
- Add conditional checks to Python workflows (week04-08) to skip tests if lab file missing
- Add conditional checks to Rust workflows (week09-14) to skip tests if src/main.rs missing
- Add workflow_dispatch trigger to all updated workflows for manual triggering
- Add status badge table to README.md showing all 15 weeks (00-14)
- Add workflow file monitoring to trigger paths for consistency

This prevents false test failures when students haven't created lab files yet
and provides visual grading dashboard via badges.

--- a/.github/workflows/week04.yml
+++ b/.github/workflows/week04.yml
@@ -1,5 +1,6 @@
 name: Week 04 - Data Structures
 on:
+  workflow_dispatch:
   push:
     paths:
       - 'week04/**'
@@ -18,5 +19,23 @@ jobs:
           python-version: '3.11'
       - name: Install dependencies
         run: pip install -r requirements.txt
+
+      - name: Check if lab file exists
+        id: check_file
+        run: |
+          if [ -f "week04/lab04.py" ]; then
+            echo "exists=true" >> $GITHUB_OUTPUT
+          else
+            echo "exists=false" >> $GITHUB_OUTPUT
+          fi
+
       - name: Run Week 04 tests
+        if: steps.check_file.outputs.exists == 'true'
         run: pytest week04/tests/ -v
+
+      - name: Lab file not found
+        if: steps.check_file.outputs.exists == 'false'
+        run: |
+          echo "⚠️ week04/lab04.py not found"
+          echo "Create this file to enable automated testing"
+          exit 0
