--- a/.github/workflows/week06.yml
+++ b/.github/workflows/week06.yml
@@ -1,8 +1,10 @@
 name: Week 06 - Python
 on:
+  workflow_dispatch:
   push:
     paths:
       - 'week06/**'
+      - '.github/workflows/week06.yml'
   pull_request:
     paths:
       - 'week06/**'
@@ -17,5 +19,23 @@ jobs:
           python-version: '3.11'
       - name: Install dependencies
         run: pip install -r requirements.txt
+
+      - name: Check if lab file exists
+        id: check_file
+        run: |
+          if [ -f "week06/lab06.py" ]; then
+            echo "exists=true" >> $GITHUB_OUTPUT
+          else
+            echo "exists=false" >> $GITHUB_OUTPUT
+          fi
+
       - name: Run Week 06 tests
+        if: steps.check_file.outputs.exists == 'true'
         run: pytest week06/tests/ -v
+
+      - name: Lab file not found
+        if: steps.check_file.outputs.exists == 'false'
+        run: |
+          echo "⚠️ week06/lab06.py not found"
+          echo "Create this file to enable automated testing"
+          exit 0
