--- a/.github/workflows/week11.yml
+++ b/.github/workflows/week11.yml
@@ -1,8 +1,10 @@
 name: Week 11 - Rust
 on:
+  workflow_dispatch:
   push:
     paths:
       - 'week11/**'
+      - '.github/workflows/week11.yml'
   pull_request:
     paths:
       - 'week11/**'
@@ -13,9 +15,31 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
+
+      - name: Check if Rust project exists
+        id: check_rust
+        run: |
+          if [ -f "week11/src/main.rs" ] && [ -s "week11/src/main.rs" ]; then
+            echo "exists=true" >> $GITHUB_OUTPUT
+          else
+            echo "exists=false" >> $GITHUB_OUTPUT
+          fi
+
       - name: Run cargo test
+        if: steps.check_rust.outputs.exists == 'true'
         run: cd week11 && cargo test --verbose
+
       - name: Run cargo fmt check
+        if: steps.check_rust.outputs.exists == 'true'
         run: cd week11 && cargo fmt --check
+
       - name: Run cargo clippy
+        if: steps.check_rust.outputs.exists == 'true'
         run: cd week11 && cargo clippy -- -D warnings
+
+      - name: Rust project not found
+        if: steps.check_rust.outputs.exists == 'false'
+        run: |
+          echo "⚠️ week11/src/main.rs not found or empty"
+          echo "Create/update this file to enable automated testing"
+          exit 0
