--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,8 @@ jobs:
           pip install pytest
       
       # Step 4: Run the test suite
-      - name: Test with pytest
+        - name: Test with pytest
         run: |
+          # The dot (.) tells Python to include the current directory in the search path
+          export PYTHONPATH=$PYTHONPATH:.
           pytest
