--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,38 +1,31 @@
-# .github/workflows/main.yml
 name: run-pytest
 
-# Trigger: Run this workflow every time code is pushed to any branch
 on: [push]
 
 jobs:
   build:
-    # Use the latest Ubuntu Linux virtual machine
     runs-on: ubuntu-latest
     
     strategy:
       matrix:
-        # Test with Python 3.10 (matches course environment)
         python-version: ["3.10"]
     
     steps:
-      # Step 1: Download your repository code
       - uses: actions/checkout@v3
       
-      # Step 2: Set up Python environment
       - name: Set up python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
       
-      # Step 3: Install Python dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install pytest
       
-      # Step 4: Run the test suite
-        - name: Test with pytest
+      - name: Test with pytest
         run: |
-          # The dot (.) tells Python to include the current directory in the search path
+          # This tells the runner to look in the root for your week03 folder
           export PYTHONPATH=$PYTHONPATH:.
-          pytest
+          # We run ONLY week03 so the empty labs don't crash the build
+          pytest week03/
